# photogrammetry

./: .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt
configs/: classical.yaml  default.yaml  hybrid.yaml  neural.yaml  quality.yaml
photogrammetry/: __init__.py
photogrammetry/dense/: __init__.py  base.py  vggt_dense.py
photogrammetry/export/: __init__.py  colmap_io.py  formats.py
photogrammetry/features/: __init__.py  base.py  superpoint_lightglue.py
photogrammetry/pipeline/: __init__.py  config.py  runner.py
photogrammetry/preprocessing/: __init__.py  images.py
photogrammetry/sfm/: __init__.py  base.py  colmap.py  vggt.py
photogrammetry/surface/: __init__.py  alicevision.py  base.py  milo.py  neurodin.py
photogrammetry/utils/: __init__.py  geometry.py  logging.py  visualization.py
scripts/: run.py  setup_sdfstudio.sh
tests/: __init__.py
